# chatbot-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/agent/: __init__.py  client.py  response_generator.py  schemas.py  tool_search.py
app/agent/prompts/: __init__.py  synthesizer_system_prompt.py  synthesizer_user_prompt.py  tools_system_prompt.py  tools_user_prompt.py
app/core/: __init__.py  config.py  logging_config.py  logging_filters.py
app/db/: engine.py  session.py  session_factory.py
app/db/models/: __init__.py  cinema_models.py  hospital_shift_model.py  outage_model.py  performance_model.py  thessaloniki_history_model.py
app/memory/: client.py  service.py  setup_client.py  shutdown_client.py
app/middleware/: request_id.py  security_headers.py
app/routers/: chat.py
app/services/: __init__.py  chat_service.py
app/tools/: sequential_tool_executor.py  thessaloniki_history_data.py  tool_registry.py
app/tools/formatters/: __init__.py  hospital_shifts_formatter.py  outages_formatter.py  performances_formatter.py  screenings_formatter.py  tool_formatters.py
app/tools/statement_builders/: hospital_shifts_statement_builder.py  (+4 more)
app/utils/: __init__.py  build_fuzzy_conditions.py  build_regex_conditions.py  current_date.py  current_datetime.py  current_week.py  greek_abbreviations.py  normalize_text.py  user_query_preprocess.py
static/: index.html
static/css/: style.css
static/js/: script.js
tests/: conftest.py
tests/integration/: test_main.py
tests/unit/: test_health_check_endpoint.py
(+43 files in other folders)
